// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputSnapshot should render normal SelectInput 1`] = `
Array [
  <label
    className="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400"
  >
    label
  </label>,
  <select
    className="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
    onChange={[Function]}
  >
    <option
      value="value"
    >
      label
    </option>
  </select>,
]
`;

exports[`TextInputSnapshot should render normal SelectInput with optional props 1`] = `
Array [
  <label
    className="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400"
    htmlFor="htmlFor"
  >
    label
  </label>,
  <select
    className="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
    id="id"
    onChange={[Function]}
    value="value"
  >
    <option
      value="value"
    >
      label
    </option>
  </select>,
]
`;
